Fix glitch: Table views on mobile don't show buttons

--- a/magi/static/less/main.less
+++ b/magi/static/less/main.less
@@ -384,6 +384,9 @@
             }
         }
     }
+    &.collection-table [data-field="buttons"] {
+        min-width: 80px;
+    }
 }
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1,
